# static_flow

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  README.zh.md
crates/backend/: .env.example  .env.production  API.md  Cargo.toml  NGINX_HTTPS_GUIDE.md  SERVER_DEPLOYMENT.md  deploy-nginx-https.sh  deploy.sh  email_accounts.example.json  nginx-http-only.conf  setup-nginx.sh  staticflow-backend.service
crates/backend/src/: article_request_worker.rs  behavior_analytics.rs  comment_worker.rs  email.rs  geoip.rs  gpt2api_rs.rs  handlers.rs  health.rs  llm_access_admin_proxy.rs  main.rs  memory_profiler.rs  models.rs  music_wish_worker.rs  request_context.rs  routes.rs  seo.rs  table_maintenance.rs
crates/backend/src/media_proxy/: config.rs  forward.rs  handlers.rs  mod.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  db.rs  lib.rs  main.rs  schema.rs  utils.rs
crates/cli/src/commands/: api.rs  complete_wish.rs  db_manage.rs  embed_songs.rs  ensure_indexes.rs  init.rs  interactive.rs  mod.rs  query.rs  rebuild_songs.rs  sync_notes.rs  write_article.rs  write_images.rs  write_music.rs
crates/cli/tests/: test_schema.rs  test_utils.rs
crates/email-notifier/: Cargo.toml
crates/email-notifier/src/: lib.rs
crates/frontend/: .gitignore  Cargo.toml  README.md  RENDERING_FIX.md  Trunk.toml  index.html  input.css  package-lock.json  package.json
crates/frontend/.cargo/: config.toml
crates/frontend/docs/: tailwind-styling-guide.md
crates/frontend/gpt2api-app/: index.html  package-lock.json  package.json  vite.config.ts
crates/frontend/gpt2api-app/src/: App.tsx  api.ts  styles.css  types.ts
crates/frontend/gpt2api-app/src/components/: AdminPanel.tsx  Composer.tsx  PendingImageCard.tsx  SessionSidebar.tsx
crates/frontend/src/: api.rs  config.rs  hooks.rs  main.rs  models.rs  music_context.rs  navigation_context.rs  utils.rs
crates/frontend/src/components/: admin_local_media_uploads.rs  article_card.rs  audio_player.rs  date_range_picker.rs  error_banner.rs  footer.rs  header.rs  icons.rs  image_with_loading.rs  loading_spinner.rs  mini_player.rs  mod.rs  pagination.rs  persistent_audio.rs  raw_html.rs  scroll_to_top_button.rs  spotlight.rs  stats_card.rs  synced_lyrics.rs  tab_bar.rs  theme_toggle.rs  toc_button.rs  token_usage_trend_chart.rs  tooltip.rs  view_trend_chart.rs
crates/frontend/src/i18n/: mod.rs  zh_cn.rs
crates/frontend/src/pages/: admin.rs  admin_ai_stream.rs  admin_article_request_stream.rs  admin_gpt2api_rs.rs  admin_kiro_account_status.rs  admin_kiro_gateway.rs  admin_llm_gateway.rs  admin_llm_gateway_monitor.rs  admin_local_media.rs  admin_local_media_player.rs  admin_music_wish_stream.rs  article_detail.rs  article_raw.rs  categories.rs  category_detail.rs  coming_soon.rs  home.rs  image_library.rs  interactive_article.rs  kiro_access.rs  latest_articles.rs  llm_access.rs  llm_access_guide.rs  llm_access_quota_status.rs  llm_access_shared.rs  llm_access_usage.rs  mod.rs  music_library.rs  music_player.rs  not_found.rs  posts.rs  search.rs  tag_detail.rs  tags.rs
crates/frontend/tests/: local_media_player_bridge.test.mjs
crates/gateway/: Cargo.toml
crates/gateway/src/: access_log.rs  config.rs  lib.rs  main.rs  proxy.rs
crates/llm-access-codex/: Cargo.toml
crates/llm-access-codex/src/: anthropic_messages.rs  codex_default_instructions.md  error.rs  instructions.rs  lib.rs  models.rs  response.rs  types.rs
crates/llm-access-codex/src/request/: chat_completions.rs  headers.rs  mod.rs  native_responses.rs  normalization.rs  path.rs  policy.rs  prepare.rs  tools.rs
crates/llm-access-kiro/: Cargo.toml
crates/llm-access-kiro/src/: auth_file.rs  billable_multipliers.rs  cache_policy.rs  config.rs  lib.rs  local_import.rs  machine_id.rs  scheduler.rs  status.rs  token.rs  wire.rs
crates/llm-access-kiro/src/anthropic/: mod.rs  types.rs  websearch.rs
crates/llm-access-kiro/src/cache_sim/: anchor_index.rs  mod.rs  prefix_tree.rs  projection.rs  simulator.rs  snapshot.rs
crates/llm-access-kiro/src/parser/: crc.rs  decoder.rs  error.rs  frame.rs  header.rs  mod.rs
crates/llm-access-store/: Cargo.toml
crates/llm-access-store/src/: duckdb.rs  lib.rs  postgres.rs  records.rs  request_cache.rs  usage_catalog.rs
crates/llm-access-store/src/duckdb/: append.rs  catalog.rs  connection.rs  filter_options.rs  metrics.rs  proxy_traffic.rs  query.rs  repository.rs  segment.rs  sql.rs  tests.rs  util.rs  writer.rs
crates/llm-access-store/src/postgres/: cache.rs  cache_convert.rs  codex_account.rs  config.rs  decode.rs  groups.rs  json.rs  keys.rs  kiro_account.rs  proxy.rs  public.rs  review.rs  routes.rs  status.rs  usage.rs
crates/llm-usage-journal/: Cargo.toml
crates/llm-usage-journal/src/: config.rs  inspect.rs  lib.rs  preview.rs  reader.rs  retention.rs  rollup.rs  state.rs  status.rs  wire.rs  writer.rs  writer_state.rs
crates/media-service/: Cargo.toml
crates/media-service/src/: cache.rs  config.rs  ffmpeg.rs  fs.rs  handlers.rs  jobs.rs  lib.rs  main.rs  path_guard.rs  playback.rs  poster.rs  probe.rs  routes.rs  state.rs  types.rs  upload.rs  upload_store.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs  request_ids.rs  runtime_logging.rs
crates/shared/: Cargo.toml
crates/shared/src/: article_request_store.rs  comments_store.rs  image_vector_maintenance.rs  interactive_store.rs  lance_schema_encoding.rs  lancedb_api.rs  lib.rs  music_store.rs  music_wish_store.rs  optimize.rs  request_ids.rs  runtime_logging.rs  task_status.rs
crates/shared/src/embedding/: cache.rs  image.rs  mod.rs  text.rs
crates/shared/src/llm_gateway_store/: codec.rs  kiro_cache_policy.rs  mod.rs  schema.rs  types.rs
llm-access/: Cargo.toml
llm-access-core/: Cargo.toml
llm-access-core/src/: routes.rs  store.rs  usage.rs
llm-access/src/: activity.rs  admin.rs  cluster.rs  codex_refresh.rs  codex_status.rs  config.rs  kiro_refresh.rs  kiro_status.rs  lib.rs  provider.rs  public.rs  runtime.rs  submission.rs  usage_journal.rs  usage_query.rs  usage_worker.rs
llm-access/src/provider/: tests.rs
(+258 files in other folders)
