[workspace]
resolver = "2"
members = [
    "frontend",
    "shared",
    "backend",
    "cli",
    "media-service",
    "media-types",
    "email-notifier",
    "gateway",
    "runtime",
    "llm-access",
    "llm-access-core",
    "llm-access-codex",
    "llm-access-kiro",
    "llm-access-migrations",
    "llm-access-store",
    "llm-usage-journal",
]
exclude = ["deps/lance", "deps/lancedb"]

# Workspace 级别的依赖版本管理
[workspace.dependencies]
# 通用依赖
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
anyhow = "1.0"
thiserror = "2.0"
async-trait = "0.1.42"
bstr = "1.12.0"
bytes = "1.10"
derivative = "2.2.0"
h2 = "0.4.12"
http = "1"
httparse = "1"
lru = "0.16.3"
once_cell = "1"
ahash = "0.8.12"

# 日志
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }

# 时间处理
chrono = { version = "0.4.42", features = ["serde"] }

# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "socks"] }
redis = { version = "0.28", default-features = false, features = ["tokio-comp", "connection-manager", "script"] }
sqlx-core = { version = "0.8.6", default-features = false, features = ["_rt-tokio", "_tls-native-tls", "chrono", "json"] }
sqlx-postgres = { version = "0.8.6", default-features = false, features = ["chrono", "json"] }

# Frontend 特定
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
gloo-net = "0.6"
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
pulldown-cmark = "0.13"

# Backend 特定
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
better_mimalloc_rs = { version = "0.1.1", features = ["config"] }
# LanceDB + Arrow (local forks for blob v2 compaction)
lance = { path = "deps/lance/rust/lance", default-features = false }
lancedb = { path = "deps/lancedb/rust/lancedb" }
arrow-array = "57.2"
arrow-schema = "57.2"
arrow = "57.2"
# meilisearch-sdk = "0.25"

# CLI 特定（暂时注释，Week 2 启用）
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
sha2 = "0.10"
image = "0.25"

[workspace.lints.rust]
missing_docs = "deny"

[workspace.lints.clippy]
allow_attributes_without_reason = "deny"
dbg_macro = "deny"
empty_docs = "deny"
tabs_in_doc_comments = "deny"
todo = "deny"
undocumented_unsafe_blocks = "deny"
unimplemented = "deny"
unwrap_used = "warn"

[workspace.lints.rustdoc]
bare_urls = "deny"
broken_intra_doc_links = "deny"
invalid_codeblock_attributes = "deny"
invalid_html_tags = "deny"
invalid_rust_codeblocks = "deny"
missing_crate_level_docs = "deny"
private_intra_doc_links = "deny"
unescaped_backticks = "deny"

# Workspace 级别的编译优化配置
[profile.release]
opt-level = "z"   # 优化体积（WASM 重要）
lto = true        # 链接时优化
codegen-units = 1 # 单一代码生成单元，更好的优化
panic = "abort"   # Panic 时直接中止，减小体积
strip = true      # 移除调试符号

# Backend release: keep symbols for memory profiler stack resolution
[profile.release-backend]
inherits = "release"
strip = false     # preserve symbol table for backtrace::resolve()
debug = 1         # line tables only (function names + file:line)
opt-level = 3     # max performance for backend server

[profile.dev]
opt-level = 0 # 开发模式不优化，编译快
debug = true  # 保留调试信息

# 针对依赖的优化（开发时依赖用 release 优化，加快运行）
[profile.dev.package."*"]
opt-level = 2

# Patch: fix object_store LocalUpload::complete() fstat-after-rename
# failure on WSL2 9p/drvfs (NTFS mounts)
[patch.crates-io]
object_store = { path = "patches/object_store" }
