[package]
name = "llm-access-core"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = "0.22.1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
