[package]
name = "static-flow-backend"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["local-media"]
local-media = ["dep:static-flow-media-types"]

[lints]
workspace = true

[dependencies]
axum = { workspace = true, features = ["multipart"] }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
reqwest = { workspace = true, features = ["stream", "multipart"] }
chrono = { workspace = true }
flate2 = "1.1"
zstd = "0.13"
maxminddb = "0.27"
async-stream = "0.3"
eventsource-stream = "0.2"
futures-util = "0.3"
url = "2.5"
urlencoding = "2.1"
pulldown-cmark = { workspace = true }
better_mimalloc_rs = { workspace = true }
better_mimalloc_sys = { version = "0.1.1", default-features = false, features = ["extended"] }
backtrace = "0.3"
dashmap = "6.1"
parking_lot = "0.12"
memory-stats = "1.2"
rustc-demangle = "0.1"
static-flow-shared = { path = "../shared" }
static-flow-runtime = { path = "../runtime" }
static-flow-email = { path = "../email-notifier" }
static-flow-media-types = { path = "../media-types", optional = true }
base64 = "0.22.1"
bytes = "1.10"
crc = "3.3"
hex = "0.4"
lopdf = "0.38"
rusqlite = { version = "0.37", features = ["bundled"] }
uuid = { version = "1.18", features = ["v4"] }
rand = "0.8"
lru = "0.12"
charabia = "0.9"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3.23"
wiremock = "0.6"
