[package]
name = "sf-cli"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
gray_matter = "0.2"
image = { workspace = true }
lancedb = { workspace = true }
lance = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
static-flow-shared = { path = "../shared" }
tokio = { workspace = true }
walkdir = { workspace = true }
futures = "0.3"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
regex = "1"
resvg = "0.45"
rand = "0.8"
lofty = "0.23"
url = "2.5"

[dev-dependencies]
tempfile = "3.10"
