[package]
name = "static-flow-frontend"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
# 使用 workspace 级别的依赖版本
yew = { workspace = true }
yew-router = { workspace = true }
gloo-net = { workspace = true }
gloo-timers = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4"
futures = "0.3"
web-sys = { workspace = true, features = [
  "Window", "Storage", "Document", "Element", "KeyboardEvent",
  "HtmlImageElement", "NodeList", "ScrollToOptions", "ScrollBehavior",
  "HtmlElement", "HtmlSelectElement", "CssStyleDeclaration", "TouchEvent", "TouchList", "Touch", "History",
  "DomTokenList", "DomRect", "Navigator", "HtmlTextAreaElement", "Selection", "Range", "Node", "HtmlButtonElement",
  "Event", "MessageEvent", "EventSource", "HtmlAudioElement", "MediaError", "HtmlInputElement",
  "ClipboardEvent", "DataTransfer",
  "TimeRanges", "File", "Blob", "FileList", "FormData"
] }
js-sys = { workspace = true }
pulldown-cmark = { workspace = true }
url = "2.5"
urlencoding = "2.1"
yew-hooks = "0.3.4"
base64 = "0.22.1"
ammonia = "4"

# Shared crate
static-flow-shared = { path = "../shared" }
static-flow-media-types = { path = "../media-types" }

[features]
default = ["local-media"]
local-media = []
mock = []
