[package]
name = "staticflow-pingora-gateway"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
serde = { workspace = true }
serde_yaml = "0.9"
signal-hook = "0.3"
tokio = { workspace = true }
tracing = { workspace = true }
static-flow-shared = { path = "../shared" }
static-flow-runtime = { path = "../runtime" }
pingora = { path = "../../deps/pingora/pingora", features = ["proxy"] }
pingora-core = { path = "../../deps/pingora/pingora-core" }
pingora-http = { path = "../../deps/pingora/pingora-http" }
pingora-proxy = { path = "../../deps/pingora/pingora-proxy" }

[dev-dependencies]
tempfile = "3.23"
