[package]
name = "llm-access-kiro"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = "0.22.1"
bytes = { workspace = true }
chrono = { workspace = true }
crc = "3.3"
flate2 = "1.1"
hex = "0.4"
llm-access-core = { path = "../llm-access-core" }
lru = "0.12"
parking_lot = "0.12"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1.18", features = ["v4"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
