[package]
name = "llm-access-store"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[features]
default = ["duckdb-prebuilt"]
# Preferred release path: use libduckdb-sys' non-bundled build script path.
# The workspace Cargo config sets DUCKDB_DOWNLOAD_LIB=1 so libduckdb is fetched
# from DuckDB GitHub releases instead of compiling DuckDB C++ locally.
duckdb-prebuilt = ["duckdb-runtime"]
duckdb-bundled = ["duckdb-runtime", "duckdb/bundled"]
duckdb-runtime = ["dep:duckdb"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
duckdb = { version = "1.10502.0", optional = true }
flate2 = "1.1"
llm-access-core = { path = "../llm-access-core" }
llm-access-kiro = { path = "../llm-access-kiro" }
llm-access-migrations = { path = "../llm-access-migrations" }
native-tls = "0.2"
postgres = "0.19"
postgres-native-tls = "0.5"
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
sqlx-core = { workspace = true }
sqlx-postgres = { workspace = true }
tracing = { workspace = true }
