[package]
name = "llm-usage-journal"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
crc32c = "0.6"
llm-access-core = { path = "../llm-access-core" }
postcard = { version = "1.1", features = ["alloc"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
zstd = "0.13"

[dev-dependencies]
tempfile = "3"
