[package]
name = "static-flow-runtime"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }

