[package]
name = "static-flow-shared"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
static-flow-runtime = { path = "../runtime" }
tracing = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
chrono = { workspace = true }
fastembed = "5"
fs2 = "0.4"
futures = "0.3"
lance = { workspace = true }
lancedb = { workspace = true }
rand = "0.8"
rusqlite = { version = "0.37", features = ["bundled"] }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
